# skel

./: .gitignore  .oxlintrc.json  1.txt  AGENTS.md  biome.json  bun.sublime-project  bun.sublime-workspace  docker-compose-top.yml  if-nvm.sh  index.html  package.json  rspack.config.mjs  setup.sh
app/int/: crontab
databases/main_db/: main-db-compose.yml
databases/main_db/conf/: pg_hba.conf  postgresql.conf
databases/main_db/pg_notify_http/: Dockerfile
dev/compile/api-call/: Cargo.toml  package.json
dev/compile/api-call/src/: lib.rs
dev/compile/app-builder/: Dockerfile  app-builder-compose.yml  build-cls.sh  build-ddls.sh  build-monitor.sh  build-prefill.sh  build.sh  extend-ddl.sed  jsx-to-php.make
dev/compile/build-api-entries/: Cargo.toml  build.sh
dev/compile/build-api-entries-php/: Cargo.toml  build-jsx
dev/compile/oxlint-rspack-plugin/: README.md  index.js  package.json
dev/scripts/: build.sh  common.inc  compose.sh  db.sh  init-project.sh  post-checkout
experiments/app-go/: go.mod
experiments/qjs/: qjs-try.php
experiments/sql-build/: sbuild.php
experiments/swc-plugin/: hello.rs
experiments/swc-plugin/api-call/: .gitignore  .swcrc  package.json  test.js
experiments/watch/: watcher.sh
services/: setup.sh
src/: App.jsx
src/azlib/: api.mjs  b64.mjs  build-xml.mjs  common.mjs  date.mjs  fetch.mjs  globals.mjs  helpers.mjs  immutable.mjs  schema-checker.mjs  ui-helpers.mjs
src/client/: App.jsx  index.css  main.jsx
src/dumps/: main_db-server.sql
src/web/: App.css  App.jsx  colors.css  index.css  index.html  main.jsx  reset.css
(+79 files in other folders)
